# leben-raytracer

./: CMakeLists.txt  README.md  main.cpp  test.cpp
lib/: CMakeLists.txt
lib/common/math/: Matrix4x4.cpp  Vec2.cpp  Vec3.cpp
lib/cpu_only/: add.cpp
lib/cuda/: add.cu
lib/img/: stb_image_write.cpp
lib/include/: add.hpp  config.hpp
lib/include/math/: Axis.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Ray3.hpp  Vec2.hpp  Vec3.hpp
lib/include/render/: HitInfo.hpp  Material.hpp  RenderBuffer.hpp  color.hpp
lib/include/scene/: Plane.hpp  Scene.hpp  SceneObject.hpp  Sphere.hpp
lib/math/: Matrix3x3.cpp  Ray3.cpp  Vec2.cpp  Vec3.cpp
lib/render/: RenderBuffer.cpp
lib/scene/: Plane.cpp  Scene.cpp  SceneObject.cpp  Sphere.cpp
scripts/: build.sh  cmake_gen.sh  conf_cmake.sh  run.sh  test.sh
src/: main.cpp  test.cpp
